[gd_scene load_steps=5 format=3]

[ext_resource type="Script" uid="uid://c1frpo6irqe8k" path="res://minigames/Runner/scripts/Main.gd" id="1_main"]
[ext_resource type="PackedScene" path="res://minigames/Runner/scenes/Player.tscn" id="2_player"]
[ext_resource type="Texture2D" path="res://Bg/hallway.png" id="3_runner_bg"]

[sub_resource type="LabelSettings" id="LabelSettings_question"]
font_size = 22
font_color = Color(1, 1, 1, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ui"]
font_size = 18
font_color = Color(1, 1, 1, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_result"]
font_size = 32
font_color = Color(1, 1, 1, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="RunnerBg" type="Sprite2D" parent="Background"]
texture = ExtResource("3_runner_bg")
position = Vector2(640, 360)
scale = Vector2(0.666667, 0.666667)

[node name="BgColor" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.12, 0.18, 1)

[node name="Lane1" type="ColorRect" parent="Background"]
offset_left = 53
offset_top = 0
offset_right = 54
offset_bottom = 720
color = Color(0.2, 0.22, 0.28, 0.5)

[node name="Lane2" type="ColorRect" parent="Background"]
offset_left = 213
offset_top = 0
offset_right = 214
offset_bottom = 720
color = Color(0.2, 0.22, 0.28, 0.5)

[node name="Lane3" type="ColorRect" parent="Background"]
offset_left = 373
offset_top = 0
offset_right = 374
offset_bottom = 720
color = Color(0.2, 0.22, 0.28, 0.5)

[node name="GameLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Player" parent="GameLayer" instance=ExtResource("2_player")]
position = Vector2(640, 550)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 101

[node name="QuestionPanel" type="Panel" parent="UILayer"]
offset_left = 20
offset_top = 20
offset_right = 700
offset_bottom = 80

[node name="QuestionLabel" type="Label" parent="UILayer"]
offset_left = 30
offset_top = 30
offset_right = 690
offset_bottom = 70
text = "Question goes here?"
label_settings = SubResource("LabelSettings_question")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="UILayer"]
offset_left = 20
offset_top = 90
offset_right = 200
offset_bottom = 120
text = "Score: 0"
label_settings = SubResource("LabelSettings_ui")

[node name="HealthLabel" type="Label" parent="UILayer"]
offset_left = 220
offset_top = 90
offset_right = 400
offset_bottom = 120
text = "Health: ❤️❤️❤️"
label_settings = SubResource("LabelSettings_ui")

[node name="ProgressLabel" type="Label" parent="UILayer"]
offset_left = 420
offset_top = 90
offset_right = 550
offset_bottom = 120
text = "0/5"
label_settings = SubResource("LabelSettings_ui")

[node name="FlashRect" type="ColorRect" parent="UILayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0.3)

[node name="ResultPanel" type="Panel" parent="UILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150
offset_top = -75
offset_right = 150
offset_bottom = 75

[node name="ResultLabel" type="Label" parent="UILayer/ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Result"
label_settings = SubResource("LabelSettings_result")
horizontal_alignment = 1
vertical_alignment = 1
